--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   "@context": "https://schema.org",
   "@type": "EducationalOrganization",
   "name": "SMA Islam Modo",
-  "url": "https://sfesa.netlify.app",
-  "logo": "https://sfesa.netlify.app/sfesa%20banner.jpg",
+  "url": "https://sfesaofc.github.io/sfesa.com/",
+  "logo": "https://sfesaofc.github.io/sfesa.com/sfesa%20banner.jpg",
   "description": "Acara SFESA 2026 — SSC & EVC di SMA Islam Modo.",
   "event": {
     "@type": "Event",
@@ -174,24 +174,25 @@
 <table>
 <tr><th>Peserta</th><td>5 pemain inti + maksimal 1 cadangan. Peserta menggunakan HP &amp; kuota sendiri.</td></tr>
 <tr><th>Biaya</th><td><strong>Rp 30.000 / tim</strong> — via DANA 085123799184 (Fatkhul Qorib) / BRI 002101165533504 (Intan Margareta)</td></tr>
-<tr><th>Pendaftaran</th><td>10 November 2025 — 10 Januari 2026 (form: <a href="https://forms.gle/W3jVNY3HREp5Hfm66" target="_blank">forms.gle/W3jVNY3HREp5Hfm66</a>)</td></tr>
+<tr><th>Pendaftaran</th><td>15 Desember 2025 — 25 Januari 2026 (form: <a href="https://forms.gle/W3jVNY3HREp5Hfm66" target="_blank">forms.gle/W3jVNY3HREp5Hfm66</a>)</td></tr>
 <tr><th>Sistem</th><td>Knockout (Single Elimination) — Best of 3 (BO3). Fase online → offline (4 tim terbaik ke offline).</td></tr>
 <tr><th>Venue Offline</th><td>Aula SMA ISLAM MODO</td></tr>
-<tr><th>Hadiah</th><td>Piala + Sertifikat + Uang Pembinaan (Juara 1/2/3)</td></tr>
+<tr><th>Hadiah</th><td>Piala + Uang Pembinaan + Beasiswa Prestasi (Juara 1/2/3)</td></tr>
 </table>
 <p style="margin-top:12px"><strong>Timeline:</strong></p>
 <ul class="muted">
-<li>12 Jan 2026 — Technical Meeting (Online)</li>
-<li>16 Jan 2026 — Fase Online Hari-1 (R64)</li>
-<li>17 Jan 2026 — Fase Online Hari-2 (R32)</li>
-<li>18 Jan 2026 — Fase Online Hari-3 (R16 &amp; awal QF)</li>
-<li>19 Jan 2026 — Quarter Final (penentuan 4 tim ke offline)</li>
-<li>20 Jan 2026 — Offline: Semifinal &amp; Bronze Match (BO3)</li>
-<li>21 Jan 2026 — Offline: Grand Final (BO3), Awarding &amp; Penutupan</li>
+<li>1 Feb 2026 — Technical Meeting (Online)</li>
+<li>8 Feb 2026 — Fase Online Hari-1 (R64)</li>
+<li>9 Feb 2026 — Fase Online Hari-2 (R64)</li>
+<li>10 Feb 2026 — Fase Online Hari-3 (R32)</li>
+<li>11 Feb 2026 — fase Online Hari-4 (R16 &amp; awal QF)  </li>
+<li>14 Feb 2026 — Quarter Final (penentuan 4 tim ke offline)</li>
+<li>15 Feb 2026 — Offline: Semifinal &amp; Bronze Match (BO3)</li>
+<li>16 Feb 2026 — Offline: Grand Final (BO3), Awarding &amp; Penutupan</li>
 </ul>
 <div class="cta-row">
 <a class="btn btn-blue" href="https://forms.gle/W3jVNY3HREp5Hfm66" target="_blank">Daftar Sekarang</a>
-<a class="btn btn-orange" href="https://challonge.com/id/SFESA" target="_blank">Lihat Jadwal Match</a>
+<a class="btn btn-white" href="https://challonge.com/id/SFESA" target="_blank">Lihat Jadwal Match</a>
 </div>
 </section>
 <section id="voli">
@@ -200,17 +201,17 @@
 <table>
 <tr><th>Peserta</th><td>12 tim (6 pemain inti + cadangan). Setiap sekolah maksimal 1 tim. Peserta wajib melampirkan foto kartu pelajar.</td></tr>
 <tr><th>Biaya</th><td><strong>Rp 200.000 / tim</strong> — via DANA 085123799184 (Fatkhul Qorib) / BRI 002101165533504 (Intan Margareta)</td></tr>
-<tr><th>Pendaftaran</th><td>10 November 2025 — 10 Januari 2026 (form: <a href="https://forms.gle/W3jVNY3HREp5Hfm66" target="_blank">forms.gle/W3jVNY3HREp5Hfm66</a>)</td></tr>
+<tr><th>Pendaftaran</th><td>15 Desember 2025 — 25 Januari 2026  (form: <a href="https://forms.gle/W3jVNY3HREp5Hfm66" target="_blank">forms.gle/W3jVNY3HREp5Hfm66</a>)</td></tr>
 <tr><th>Sistem</th><td>Knock Out — Best of 3 Set (Set 1 &amp; 2 = 25 rally point, set penentuan = 15).</td></tr>
 <tr><th>Lokasi</th><td>Lapangan Volly SMA ISLAM MODO</td></tr>
-<tr><th>Hadiah</th><td>Trophy + Sertifikat + Uang Pembinaan (Juara 1/2/3)</td></tr>
+<tr><th>Hadiah</th><td>Trophy + Sertifikat + Uang Pembinaan + Beasiswa Prestasi (Juara 1/2/3)</td></tr>
 </table>
 <p style="margin-top:12px"><strong>Timeline:</strong></p>
 <ul class="muted">
-<li>14 Jan 2026 — Technical Meeting</li>
-<li>19 Jan 2026 — Babak 12 Besar</li>
-<li>20 Jan 2026 — Babak 9—12 &amp; perebutan posisi</li>
-<li>21 Jan 2026 — Semifinal &amp; Grand Final, Awarding</li>
+<li>1 Feb 2026 — Technical Meeting</li>
+<li>14 Feb 2026 — Babak 12 Besar dan Babak 6 Besar</li>
+<li>15 Feb 2026 —Semifinal &amp; Grand Final</li>
+<li>16 Feb 2026 — Awarding</li>
 </ul>
 <div class="cta-row">
 <a class="btn btn-blue" href="https://forms.gle/W3jVNY3HREp5Hfm66" target="_blank">Daftar Sekarang</a>
